@startuml

    interface Evento {
        + {abstract} afectarJugador(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino): Esquina
        }

    class EventoVacio {
        + afectarJugador(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino): Esquina
        }

    class Pozos {
        + afectarJugador(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino): Esquina
        }

    class Piquete {
        + afectarJugador(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino): Esquina
         }

    class ControlPolicial {
         + afectarJugador(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino): Esquina
        }
    class SorpresaFavorable {
             + afectarJugador(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino): Esquina
            }
    class SorpresaDesfavorable {
             + afectarJugador(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino): Esquina
            }
    class SorpresaCambioDeVehiculo {
             + afectarJugador(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino): Esquina
            }


Evento <|.. Pozos
Evento <|.. EventoVacio
Evento <|.. Piquete
Evento <|.. ControlPolicial
Evento <|.. SorpresaCambioDeVehiculo
Evento <|.. SorpresaDesfavorable
Evento <|.. SorpresaFavorable


@enduml